vcluster_versioned_docs/version-0.29.0/deploy/control-plane/binary/manage.mdx
---
title: Manage vCluster Standalone Control Plane Nodes
sidebar_label: Manage
sidebar_position: 3
sidebar_class_name: standalone private-nodes
---
import Flow, { Step } from "@site/src/components/Flow";

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

import DeployChangesStandalone from '../../../_partials/manage/deploy-changes-standalone.mdx';

import TenancySupport from '../../../_fragments/tenancy-support.mdx';

<TenancySupport standalone="true"/>

## Update vCluster Standalone configuration

<DeployChangesStandalone />

## Removing nodes

If you have not enabled joining the control plane nodes as worker nodes, then removing vCluster
requires only stopping the service and removing files from the nodes. For HA clusters, there are additional steps detailed below.

For control plane nodes that are joined in the cluster (`controlPlane.standalone.joinNode.enabled: true`),  first make sure you follow this processes [worker node removal steps](../../worker-nodes/private-nodes/manage/#remove-worker-node) and [node cleanup](../../worker-nodes/private-nodes/manage/#clean-up-orphaned-node)

<br/>
<br/>
<Tabs
  groupId="deploy"
  defaultValue="single"
  values={[
    { label: "Single Control Plane Node", value: "single" },
    { label: 'Multiple Control Plane Nodes (HA)', value: 'HA' },
  ]
  }>
  <TabItem value="single">
    <Flow>
      <Step>
        Stop the vCluster service on the control plane node.

        ```bash title="Stop vCluster service"
        systemctl stop vcluster.service
        ```
      </Step>
      <Step>
        Remove vCluster files on the control plane node.

        ```bash title="Clean up vCluster files"
        rm -rf /var/lib/vcluster && rm /etc/systemd/system/vcluster.service
        ```
      </Step>
    </Flow>
  </TabItem>
  <TabItem value="HA">
    <Flow>
      <Step>
        Save the IP Address of the node you want to remove, it will be needed later.
        There are multiple ways to check it, but if you're unsure, you can get it from the vcluster logs:

        ```bash title="Get etcd peer ip"
        journalctl -u vcluster.service | grep etcd | grep "Adding peer"
        INFO        etcd/add.go:48        Adding peer https://10.244.0.28:2380
        ```

        Stop the vCluster service on the control plane node.

        ```bash title="Stop vCluster service"
        systemctl stop vcluster.service
        ```
      </Step>
      <Step>
        Remove vCluster files on the control plane node.

        ```bash title="Clean up vCluster files"
        rm -rf /var/lib/vcluster && rm /etc/systemd/system/vcluster.service
        ```
      </Step>
      <Step>
        On the different node, list existing etcd cluster members:
        ```bash title="List ETCD members"
        /var/lib/vcluster/bin/etcdctl --endpoints=127.0.0.1:2379 --cert=/var/lib/vcluster/pki/apiserver-etcd-client.crt --key=/var/lib/vcluster/pki/apiserver-etcd-client.key --cacert=/var/lib/vcluster/pki/etcd/ca.crt member list
        ```

        find a peer ID (first column) in the output that matches your removed node IP saved earlier (`https://10.244.0.28:2380`):
        ```bash title="List ETCD members output"
        8f2bcb8fdb98bd92, started, 10.244.0.26, https://10.244.0.26:2380, https://10.244.0.26:2379, false
        d12398ad344dc8cf, started, 10.244.0.29, https://10.244.0.29:2380, https://10.244.0.29:2379, false
        ee33f76261ecb3b3, started, 10.244.0.28, https://10.244.0.28:2380, https://10.244.0.28:2379, false
        ```

        matching peer ID is `ee33f76261ecb3b3`.

        then, remove etcd peer:

        ```bash title="Remove ETCD peer"
        /var/lib/vcluster/bin/etcdctl --endpoints=127.0.0.1:2379 --cert=/var/lib/vcluster/pki/apiserver-etcd-client.crt --key=/var/lib/vcluster/pki/apiserver-etcd-client.key --cacert=/var/lib/vcluster/pki/etcd/ca.crt member remove ee33f76261ecb3b3
        ```

      </Step>
    </Flow>
  </TabItem>

</Tabs>

## Reusing nodes

If you want to reuse a node that was already running vCluster standalone, you can do so by reseting the node and running install script again.

<Tabs
  groupId="transition"
  defaultValue="cp2cp"
  values={[
    { label: "Control Plane to Control Plane", value: "cp2cp" },
    { label: 'Control Plane to Worker Node', value: 'cp2wn' },
    { label: 'Worker Node to Control Plane', value: 'wn2cp' },
  ]}
>
  <TabItem value="cp2cp">
    <Flow>
      <Step>
        To reset the node, run install script using `--reset-only` flag.

        ```bash title="Reset the node"
        curl -sfL https://github.com/loft-sh/vcluster/releases/download/${VCLUSTER_VERSION}/install-standalone.sh | sh -s -- --reset-only
        ```
        You should see the following output:
        ```bash
🧹 Resetting vCluster installation...
✅ Reset complete.
        ```
      </Step>
      <Step>
        Run the install script again.

        ```bash title="Run the install script again"
        curl -sfL https://github.com/loft-sh/vcluster/releases/download/${VCLUSTER_VERSION}/install-standalone.sh | sh -s -- --vcluster-name my-new-vcluster --config ${PWD}/vcluster.yaml
        ```
      </Step>
    </Flow>
  </TabItem>

  <TabItem value="cp2wn">
    <Flow>
      <Step>
        To reset the node, run install script using `--reset-only` flag.

        ```bash title="Reset the node"
        curl -sfL https://github.com/loft-sh/vcluster/releases/download/${VCLUSTER_VERSION}/install-standalone.sh | sh -s -- --reset-only
        ```
        You should see the following output:

        ```bash title="Output"
🧹 Resetting vCluster installation...
✅ Reset complete.
        ```
      </Step>
      <Step>
        From the primary node for virtual cluster, create a node join token.

        ```bash title="Create node join token"
        vcluster token create
        ```

        You should see similar output:

        ```bash title="Output"
curl -fsSLk "https://10.244.0.16:8443/node/join?token=hzndlx.vhf08ob7pg97r2hb" | sh -
        ```

      </Step>
      <Step>
        Back on your node, to join you'll need to add `--force-join` flag to the command.

        ```bash title="Join the node"
        curl -fsSLk "https://10.244.0.16:8443/node/join?token=hzndlx.vhf08ob7pg97r2hb" | sh -s -- --force-join
        ```

        Run it on the node you want to join. You should see output similar to this:

        ```log title="Output"
Detected OS: ubuntu
Preparing node for Kubernetes installation...
Kubernetes version: v1.33.5
Installing Kubernetes binaries...
Downloading Kubernetes binaries from https://github.com/loft-sh/kubernetes/releases/download...
        Resetting node...
Ensuring kubelet is stopped...
kubelet service not found
Starting containerd...
Created symlink /etc/systemd/system/multi-user.target.wants/containerd.service → /etc/systemd/system/containerd.service.
Starting kubelet...
Created symlink /etc/systemd/system/multi-user.target.wants/kubelet.service → /etc/systemd/system/kubelet.service.
Installation successful!
Joining node into cluster...
[preflight] Running pre-flight checks
[preflight] Reading configuration from the "kubeadm-config" ConfigMap in namespace "kube-system"...
[preflight] Use 'kubeadm init phase upload-config --config your-config-file' to re-upload it.
[kubelet-start] Writing kubelet configuration to file "/var/lib/kubelet/config.yaml"
[kubelet-start] Writing kubelet environment file with flags to file "/var/lib/kubelet/kubeadm-flags.env"
[kubelet-start] Starting the kubelet
[kubelet-check] Waiting for a healthy kubelet at http://127.0.0.1:10248/healthz. This can take up to 4m0s
[kubelet-check] The kubelet is healthy after 1.003203387s
[kubelet-start] Waiting for the kubelet to perform the TLS Bootstrap

This node has joined the cluster:
* Certificate signing request was sent to apiserver and a response was received.
* The Kubelet was informed of the new secure connection details.

Run 'kubectl get nodes' on the control-plane to see this node join the cluster.
        ```

        Your node should now be joined to the cluster.
      </Step>
    </Flow>
  </TabItem>
  <TabItem value="wn2cp">
    <Flow>
      <Step>
        Follow steps in [Worker Nodes Documentation](../../worker-nodes/private-nodes/manage.mdx#reuse-a-node) to reset the node.
      </Step>
      <Step>
        Proceed with installing vCluster standalone.

        ```bash title="Run the install script again"
        curl -sfL https://github.com/loft-sh/vcluster/releases/download/${VCLUSTER_VERSION}/install-standalone.sh | sh -s -- --vcluster-name my-new-vcluster --config ${PWD}/vcluster.yaml
        ```
      </Step>
    </Flow>
  </TabItem>
</Tabs>